--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <!-- script tag to connect the (google maps search places api) with the (google maps api) using your key -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyB5l1Cj-KR0bKgu48RhjbUR3dOX6IFNDOo"></script>
     <title>React App</title>
   </head>
   <body>
